updated check for high contrast to also check for images off mode (at least in FF). Added #a11yTestNode class to dijit.css. Fixes #3176
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@8780 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -76,7 +76,19 @@
 	display:none !important;
 }
 
-
+/**** 
+		A11Y CHECK 
+ ****/
+#a11yTestNode {
+	/* used to test if high contrast mode is on or images are turned off */
+	border: 1px solid;
+	border-color:red green;
+	position: absolute;
+	left: -999px;
+	top: -999px;
+	background-image: url("../form/templates/blank.gif");
+}  
+ 
 /*** Full sized arrows (matching the size of a line of text) ***/
 
 /* MOW: potentially deprecating these
